Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "\"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \"\""
+    "\"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \""
    ]
   },
   {
