--- a/index.ipynb
+++ b/index.ipynb
@@ -112,19 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-7-1cb03518a198>, line 1)",
+     "evalue": "EOL while scanning string literal (<ipython-input-11-1c57878f8669>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-1cb03518a198>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \"\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-1c57878f8669>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \"\u001b[0m\n\u001b[0m                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
+    "travel_month\n",
     "\"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \""
    ]
   },
