Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,8 +125,7 @@
     }
    ],
    "source": [
-    "travel_month\n",
-    "\"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \""
+    "travel_month\n"
    ]
   },
   {
