Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,22 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'February'"
+       "'3'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "travel_month\n"
+    "number_of_weeks\n"
    ]
   },
   {
