--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
     }
    ],
    "source": [
-    "\n",
+    "\"We woud like to travel to England in\" + travel_month + \"for\" + number_of_weeks \"\n",
     "\n"
    ]
   },
