Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,22 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'We woud like to travel to England inFebruaryfor5'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-a5f0e24960e2>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-a5f0e24960e2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\"\u001b[0m\n\u001b[0m                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "\"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\"\n",
+    "\"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\n",
     "\n"
    ]
   },
