--- a/index.ipynb
+++ b/index.ipynb
@@ -112,20 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-a5f0e24960e2>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-20-f937b0437690>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-a5f0e24960e2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\"\u001b[0m\n\u001b[0m                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-f937b0437690>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\"\"\u001b[0m\n\u001b[0m                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "\"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\n",
+    "\"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks \"weeks\"\"\n",
     "\n"
    ]
   },
