--- a/index.ipynb
+++ b/index.ipynb
@@ -112,20 +112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-23-fac066bf7a5b>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-fac066bf7a5b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks 'weeks'\"\u001b[0m\n\u001b[0m                                                                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'We woud like to travel to England inFebruaryfor5weeks'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks + \n",
+    "\"We woud like to travel to England in\" +  travel_month  + \"for\"  +  number_of_weeks + \"weeks\"\n",
     "\n"
    ]
   },
